# Orbitix

./: .gitignore  Procfile  backend.sh  distance_matrix.py  final_response.md  google_maps_distance.py  google_vision_api.py  rapidapi.py  sample_response.json  sample_response_2.json  tripadvisor.py  vercel.json
backend/: main.py  pyproject.toml  requirements.txt
backend/src/agents/: deep_search_agent.py  graph_rag_agent.py  news_agent.py
backend/src/agents/amadeus/: README.md  __init__.py  airport_search.py  amadeus_agent.py  flight_search.py  requirements.txt  test_airport_search.py  test_flight_search.py  utilities.py
backend/src/agents/deepsearch_agent/: deep_search_agent.py
backend/src/agents/elevenlabs/: audio_tour_agent.py  elevenlabs_agent.py  elevenlabs_toolkit.py
backend/src/agents/google_maps/: google_maps_agent.py
backend/src/agents/news_agent/: news_agent.py
backend/src/agents/traveladvisor/: travel_advisor_agent.py
backend/src/api/: audio_tour_guide_api.py  chat_streaming.py  development_stream.py  health.py  memory_management.py  tripadvisor_api.py  user_registration.py
backend/src/core/: container.py
backend/src/providers/: neo4j_graph_query.py  neo4j_graph_upsertion.py  team_provider.py  voyage_embedder.py
backend/src/services/: chat_service.py  episodic_memory_service.py  team_agent_service.py  user_registration_service.py  working_memory_service.py
backend/src/teams/: travel_agent_team.py
backend/src/utils/: constants.py  dummy_response.json  gcs_uploads.py  prompts.py  schemas.py
frontend/: index.html  package-lock.json  (+3 more)
(+32 files in other folders)
